--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,25 +7,17 @@ html
     meta(name='description', content='Image Manager')
     meta(name='author', content='Thomas Devisscher')
     title= title
-    // Bootstrap Core CSS
     script(src='https://code.jquery.com/jquery-3.1.1.min.js')
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" )
     link(rel="stylesheet" href="/stylesheets/style.css")
   body
-    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') Image Manager
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(href='/') Home
+    nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
+      a.navbar-brand(href='#') Image Manager
+      ul.nav.navbar-nav
+        li.nav-item.active
+          a.nav-link(href='/')
+            | Home 
     .container
       .row
     .container
